三森すずこ

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <input id="num" type="range" min="0" max="100" step="1" value="3">
-    <h1 id="suzuko"></h1>
+    <h1 id="suzuko">三森すずこ</h1>
 
     <script type="text/javascript">
       var suzuko = document.getElementById('suzuko')
